# vice-sharp

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  GitVersion.yml  HANDOFF.md  NuGet.config  README.md  Remediation.md  THIRD_PARTY_NOTICES.md  ViceSharp.slnx  add_docs.py  agents-readme-first.yaml  azure-pipelines.ci.yml  azure-pipelines.release.yml  build.cmd  build.ps1  build.sh  find_violations.py  handoff-2026-05-17.md  handoff-validation.md  handoff.md  prompt.md  vice-snapshot-20260630171307.vsf
.clinerules/: vicesharp-development.md
.github/: FUNDING.yml
.nuke/: parameters.json
bucket/: vice-sharp.json
docs/: AI-Review.md  Architecture.md  Decoupling.md  HANDOFF-2026-06-24.md  Iteration-00-Foundations.md  Iteration-Roadmap.md  PubSub.md  Public-API.md  README.md  ROL.md  ROMs.md  StateWindow.md  USER-GUIDE.md  VICE-MIGRATION.md  audit-vicii-vs-vice-2026-07-06.md  handoff-vic-boot-render-garbage.md  handoff.md  mcpserver-bug6-verification-2026-06-23.md  mcpserver-issues-2026-06-22.md  perf-sprite-dma-optimization-plan-001.md  plan.md  receipts-nativeresidue-002-2026-07-09.md  receipts-s9-filter-bitexact.md  receipts-test-baseline-2026-07-07.md  receipts-viceparity-closure-2026-07-10.md  (+5 more)
native/: .build-nopatch.sh  .version  CMakeLists.txt  Vice.Native.proj  build-vice-shim.ps1  build-vice-shim.sh  vice-moncommands.txt  vice-shim.c  vice-shim.h
native/.ccwrap/: c++  cc  g++  gcc
native/patches/: s9-filter-probe.patch  vice-shim-runtime.patch  vice-shim-runtime.prompt.md
(+892 files in other folders)
